# jira2you

./: .gitignore  Cargo.toml  README.md  config.example.json
src/: main.rs
src/config/: mod.rs
src/jira/: client.rs  models.rs
src/ui/: app.rs  events.rs  mod.rs
src/ui/components/: backlog_view.rs  board_selector.rs  help.rs  input.rs  issue_detail.rs  mod.rs  project_selector.rs  sprint_selector.rs  sprint_view.rs
