[package]
name = "jira-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
